syntax = "proto3";

package v1;

option go_package = ".;pb";

import "user_message.proto";

message RequestListUsers{
    int32 offset = 1;
    int32 limit = 2;
}

message RequestUserProfile{
    string username = 1; 
}

message ResposneUser{
    User user = 1;    
}



service UserService{
    // List users
    rpc List(RequestListUsers) returns (stream ResposneUser){}
    // get user profile
    rpc Profile(RequestUserProfile) returns (ResposneUser){}
}